// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip[Base] should render correctly  1`] = `
<div>
  <noscript />
  <button
    class="ctqq9eq soui-button-primary c-3br65q soui-button-button"
    dir="ltr"
    type="button"
  >
    <span>
      hover me
    </span>
  </button>
</div>
`;

exports[`Tooltip[Base] should render correctly about click 1`] = `
<div>
  <noscript />
  <button
    class="ctqq9eq soui-button-primary c-3br65q soui-button-button"
    dir="ltr"
    type="button"
  >
    <span>
      click me
    </span>
  </button>
</div>
`;

exports[`Tooltip[Base] should render correctly about disabled 1`] = `
<div>
  <noscript />
  <span
    class="c-op6l22 soui-tooltip-target"
    style="cursor: not-allowed;"
  >
    <button
      class="c-pzb818 soui-button-secondary c-3br65q soui-button-button cmeqq1o soui-button-disabled"
      dir="ltr"
      disabled=""
      style="pointer-events: none;"
      type="button"
    >
      <span>
        Disabled
      </span>
    </button>
  </span>
</div>
`;
